@@ -1,0 +1,162 @@
+<?php
+/* Copyright (C) 2003      Rodolphe Quiedeville <rodolphe@quiedeville.org>
+ * Copyright (c) 2004-2010 Laurent Destailleur  <eldy@users.sourceforge.net>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+/**
+ *	    \file       htdocs/compta/deplacement/stats/month.php
+ *      \ingroup    facture
+ *		\brief      Page des stats notes de frais par mois
+ *		\version    $Id$
+ */
+
+require("../../../main.inc.php");
+require_once(DOL_DOCUMENT_ROOT."/core/dolgraph.class.php");
+require_once(DOL_DOCUMENT_ROOT."/compta/deplacement/stats/deplacementstats.class.php");
+
+$langs->load("trips");
+
+$GRAPHWIDTH=500;
+$GRAPHHEIGHT=200;
+
+// Check security access
+if ($user->societe_id > 0)
+{
+  $action = '';
+  $socid = $user->societe_id;
+}
+
+$year = isset($_GET["year"])?$_GET["year"]:date("Y",time());
+
+$mode='customer';
+if (isset($_GET["mode"])) $mode=$_GET["mode"];
+
+
+
+/*
+ * View
+ */
+
+llxHeader();
+
+$title=$langs->trans("TripsAndExpensesStatistics");
+$dir=$conf->deplacement->dir_temp;
+
+$mesg = '<a href="month.php?year='.($year - 1).'&amp;mode='.$mode.'">'.img_previous().'</a> ';
+$mesg.= $langs->trans("Year")." $year";
+$mesg.= ' <a href="month.php?year='.($year + 1).'&amp;mode='.$mode.'">'.img_next().'</a>';
+print_fiche_titre($title, $mesg);
+
+create_exdir($dir);
+
+$stats = new DeplacementStats($db, $socid);
+
+
+$data = $stats->getNbByMonth($year);
+
+$filename = $dir."/tripsexpensesnb-".$year.".png";
+$fileurl = DOL_URL_ROOT.'/viewimage.php?modulepart=tripsexpensesstats&file=tripsexpensesnb-'.$year.'.png';
+
+$px = new DolGraph();
+$mesg = $px->isGraphKo();
+if (! $mesg)
+{
+    $px->SetData($data);
+    $px->SetMaxValue($px->GetCeilMaxValue());
+    $px->SetMinValue($px->GetFloorMinValue());
+    $px->SetWidth($GRAPHWIDTH);
+    $px->SetHeight($GRAPHHEIGHT);
+    $px->SetShading(3);
+	$px->SetHorizTickIncrement(1);
+	$px->SetPrecisionY(0);
+    $px->draw($filename);
+}
+
+
+
+$data = $stats->getAmountByMonth($year);
+
+$filename_amount = $dir."/tripsexpensesamount-".$year.".png";
+$fileurl_amount = DOL_URL_ROOT.'/viewimage.php?modulepart=tripsexpensesstats&file=tripsexpensesamount-'.$year.'.png';
+
+$px = new DolGraph();
+$mesg = $px->isGraphKo();
+if (! $mesg)
+{
+    $px->SetData($data);
+    $px->SetYLabel($langs->trans("AmountTotal"));
+    $px->SetMaxValue($px->GetCeilMaxValue());
+    $px->SetMinValue($px->GetFloorMinValue());
+    $px->SetWidth($GRAPHWIDTH);
+    $px->SetHeight($GRAPHHEIGHT);
+    $px->SetShading(3);
+	$px->SetHorizTickIncrement(1);
+	$px->SetPrecisionY(0);
+    $px->draw($filename_amount);
+}
+
+
+
+$res = $stats->getAverageByMonth($year);
+
+$data = array();
+
+for ($i = 1 ; $i < 13 ; $i++)
+{
+  $data[$i-1] = array(ucfirst(substr(dol_print_date(dol_mktime(12,0,0,$i,1,$year),"%b"),0,3)), $res[$i]);
+}
+
+$filename_avg = $dir."/tripsexpensesaverage-".$year.".png";
+$fileurl_avg = DOL_URL_ROOT.'/viewimage.php?modulepart=tripsexpensesstats&file=tripsexpensesaverage-'.$year.'.png';
+
+$px = new DolGraph();
+$mesg = $px->isGraphKo();
+if (! $mesg)
+{
+    $px->SetData($data);
+    $px->SetYLabel($langs->trans("AmountAverage"));
+    $px->SetMaxValue($px->GetCeilMaxValue());
+    $px->SetMinValue($px->GetFloorMinValue());
+    $px->SetWidth($GRAPHWIDTH);
+    $px->SetHeight($GRAPHHEIGHT);
+    $px->SetShading(3);
+	$px->SetHorizTickIncrement(1);
+	$px->SetPrecisionY(0);
+    $px->draw($filename_avg);
+}
+
+print '<table class="border" width="100%">';
+print '<tr><td align="center">'.$langs->trans("NumberByMonth").'</td>';
+print '<td align="center">';
+if ($mesg) { print $mesg; }
+else { print '<img src="'.$fileurl.'">'; }
+print '</td></tr>';
+print '<tr><td align="center">'.$langs->trans("AmountTotal").'</td>';
+print '<td align="center">';
+if ($mesg) { print $mesg; }
+else { print '<img src="'.$fileurl_amount.'">'; }
+print '</td></tr>';
+print '<tr><td align="center">'.$langs->trans("AmountAverage").'</td>';
+print '<td align="center">';
+if ($mesg) { print $mesg; }
+else { print '<img src="'.$fileurl_avg.'">'; }
+print '</td></tr></table>';
+
+$db->close();
+
+llxFooter('$Date$ - $Revision$');
+?>
