@@ -175,6 +175,7 @@ Action=Action
 About=About
 WelcomeString=<font class="body">We are </font>%s<font class="body">, and you are connected as user</font> %s
 Number=Number
+NumberByMonth=Number by month
 Numero=Numero
 Limit=Limit
 Limits=Limits
