@@ -174,6 +174,7 @@ DefaultModel=Modèle par défaut
 About=À propos
 WelcomeString=<font class="body">Nous sommes le</font> %s<font class="body">, et vous êtes connecté(e) en tant que </font> %s
 Number=Nombre
+NumberByMonth=Nombre par mois
 Numero=Numéro
 Limit=Limite
 Limits=Limites
